<resources>
  <string name="app_name">SuntiQ</string>
  <string name="loading_dialog_add">Mohon tunggu sebentar...</string>
  <string name="app_label">SuntiQ</string>
  <string name="login_label">Masuk</string>
  <string name="register_label">Daftar</string>
  <string name="next_label">Lanjutkan</string>
  <string name="save_label">Simpan</string>
  <string name="done_label">Selesai</string>
  <string name="change_label">Ubah</string>
  <string name="cancel_label">Batal</string>
  <string name="send_label">Antar Unit</string>
  <string name="yes_label">Ya</string>
  <string name="no_label">Tidak</string>
  <string name="photo_uploaded">Photo Uploaded</string>
  <string name="duty_letter">Surat Tugas</string>
  <string name="duty_letter_title">Lakukan Foto dikantor</string>
  <string name="download_bastk_button">Download Bastk</string>

  <string name="forgot_password_label">Request Password</string>
  <string name="forgot_password_title">Forgot Password</string>
  <string name="forgot_password_caption">Send your whatsapp number &amp; get your new password.</string>
  <string name="forgot_password_input_whatsapp">Masukkan nomor whatsapp</string>
  <string name="forgot_password_input_code">Masukkan Kode</string>
  <string name="forgot_password_code">Ulangi Kode berikut</string>

  <!--Intro-->
  <string name="intro_title">Welcome to</string>
  <string name="intro_caption">We help you solved The Problem</string>
  <string name="intro_caption_button">Create an Account</string>
  <string name="intro_caption_login">Sudah punya akun ? <b><font color="#29B6F2">Login</font></b></string>

  <!--Register - Login-->
  <string name="login_title">Welcome Back!</string>
  <string name="login_caption">I’m so happy to see. You can Login and continue.</string>
  <string name="login_input_password">Masukkan password</string>
  <string name="login_title_load_data">Loading Data</string>
  <string name="login_caption_load_data">Please wait a couple time, we still loading your data.</string>
  <string name="login_caption_uploading">Uploading.....</string>

  <string name="register_title">Create an Account</string>
  <string name="register_complete_title">Complete Profile</string>
  <string name="register_verify_title">Verifikasi Muka</string>
  <string name="register_verify_id_title">Verifikasi KTP</string>
  <string name="register_verify_success_title">Pendaftaran Berhasil</string>
  <string name="register_caption">Create an account so you can use SuntiQ!</string>
  <string name="register_verify_caption">Tunjukan foto muka kamu untuk kami verifikasi</string>
  <string name="register_verify_id_caption">Tunjukan foto Ktp kamu untuk kami verifikasi.</string>
  <string name="register_verify_success_caption">Pendaftaranmu berhasil , Silahkan Konfirmasi kepada Admin di Nomor Whatsapp <a href="https://wa.me/628161826209">Klik Disini</a></string>
  <string name="register_input_repeat_password">Konfirmasi password</string>
  <string name="register_input_password">Buat password</string>
  <string name="register_input_phone">Masukkan nomor hp</string>
  <string name="register_input_name">Masukkan nama lengkap</string>
  <string name="register_input_birth_location">Masukkan tempat lahir</string>
  <string name="register_input_date_location">Masukkan tanggal lahir</string>
  <string name="register_input_bank_number">Masukkan nomor rekening</string>
  <string name="register_input_bank_name">Pilih Bank</string>
  <string name="register_input_number_id">Masukkan NIK</string>

  <string name="register_caption_forgot_password">Lupa password?</string>
  <string name="register_caption_already_account">Belum punya akun? <b>Buat Akun</b></string>

  <!--Home-->
  <string name="home_title">Halo, <b>%1$s</b></string>
  <string name="home_input_search">Cari NoPol / NoSin / NoKa</string>
  <string name="home_caption">Pencarian Data</string>
  <string name="home_result">Kami menemukan <b>%1$s</b> hasil dari <b>%2$s</b></string>
  <string name="home_caption_call">Apabila anda ingin mengupload data melalui aplikasi kami dapat menghubungi admin Telp/Whatsapp %1$s</string>
  <string name="home_title_bottom_sheet">Data Kendaraan</string>
  <string name="home_type_bottom_sheet">Tipe Kendaraan</string>
  <string name="home_number_bottom_sheet">Nomor Kendaraan</string>
  <string name="home_mark_bottom_sheet">Merk Kendaraan</string>
  <string name="home_color_bottom_sheet">Warna Kendaraan</string>
  <string name="home_year_bottom_sheet">Tahun</string>
  <string name="home_leasing_bottom_sheet">Leasing</string>
  <string name="home_from_bottom_sheet">Nomor Rangka</string>
  <string name="home_engine_bottom_sheet">Nomor Mesin</string>
  <string name="home_confirmation_bottom_sheet">Apakah data akan diproses melalui PT. Jasa Saga Utama?</string>
  <string name="home_template_bottom_sheet">:  %1$s</string>
  <string name="home_template_dialog">Ingin memproses kendaraan ini ? <b>%1$s</b></string>

  <!--Confirmation-->
  <string name="confirmation_title">Pilih Jenis kendaraan</string>
  <string name="confirmation_motorcycle">Motor (R2)</string>
  <string name="confirmation_car">Mobil (R4)</string>
  <string name="confirmation_add_photo_unit">Tambahkan Foto Unit 2 Sisi</string>
  <string name="confirmation_add_photo_id">Tambahkan Foto STNK</string>
  <string name="confirmation_add_location">Tentukan Lokasi Pengantaran Kendaraan</string>
  <string name="confirmation_hint_add_location">Masukkan lokasi</string>
  <string name="confirmation_button_next">Proses Unit</string>
  <string name="confirmation_title_identification">Identitas Penerima</string>
  <string name="confirmation_input_name">Nama Penerima</string>
  <string name="confirmation_input_phone">Nomor Hp Penerima</string>
  <string name="confirmation_input_role">Jabatan Penerima</string>
  <string name="confirmation_add_office">Foto Kantor Penerima</string>
  <string name="confirmation_title_office">Kantor Penerima</string>
  <string name="confirmation_title_receiver">Foto Penerima</string>
  <string name="confirmation_title_number">Foto No Rangka/No Mesin</string>
  <string name="confirmation_office">Kantor Penerima</string>
  <string name="confirmation_branch">Nama PIC Cabang</string>
  <string name="confirmation_name_branch">Nama Cabang</string>
  <string name="confirmation_number_branch">Kontak PIC Cabang</string>

  <!--Delivery-->
  <string name="delivery_button_title">Pilih Pengantaran</string>
  <string name="delivery_button_selected_title">Pengantaran Terpilih</string>
  <string name="delivery_button_start_title">Mulai Pengantaran</string>
  <string name="delivery_title">Lokasi Pengantaran</string>
  <string name="delivery_title_time">Jam Operasional :</string>
  <string name="delivery_button_my_location">Lihat Titik</string>

  <!-- Form-->
  <string name="delivery_form_title">Unggah Foto Serah Terima Kendaraan</string>
  <string name="delivery_form_photo_handover">Foto serah terima kendaraan</string>
  <string name="delivery_form_photo_unit">Foto unit 4 sisi</string>
  <string name="delivery_form_caption">Lengkapi data dibawah ini untuk melakukan verifikasi.</string>
  <string name="delivery_form_photo_signature">Foto saat tanda tangan BASTK</string>
  <string name="delivery_form_photo_sign">Foto BASTK yang telah ditandatangani ketiga pihak (Penerima, Mitra Pemilik) Kendaraan.</string>
  <string name="delivery_form_photo_with_user">Foto bersama Penerima, Mitra, Pemilik (beserta) kendaraannya di depan kantor</string>

  <!--Cancellation-->
  <string name="cancellation_title">Lengkapi data dibawah ini sebelum membatalkan.</string>
  <string name="cancellation_title_question">Kenapa kamu ingin membatalkan?</string>
  <string name="cancellation_not_cooperative">Debitur tidak kooperatif</string>
  <string name="cancellation_not_cooperative_other">Lingkungan tidak kondusif</string>
  <string name="cancellation_not_suitable">Detail Kendaraan tidak cocok</string>
  <string name="cancellation_other">Lainnya…</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
  <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

</resources>